--- a/tex/main.tex
+++ b/tex/main.tex
@@ -62,7 +62,7 @@ Expressions, types, and modes are defined by the grammar below (\(x\) ranges ove
 \begin{align*}
   m &::= \E \mid \G \\
   \tau &::= \Unit \mid \Bool \mid \Nat \mid \Float{m} \mid \tau_1 \times \tau_2 \mid \tau_1 + \tau_2 \mid \tau_1 \to \tau_2 \\
-  e &::= x \mid \lambda x.\,e \mid \mathsf{rec}\;f\;x.\,e \mid e_1\,e_2 \mid \langle e_1, e_2\rangle \mid \mathsf{fst}\,e \mid \mathsf{snd}\,e \mid \mathsf{inl}\,e \mid \mathsf{inr}\,e \mid \mathsf{case}\;e\;\mathsf{of}\;\mathsf{inl}\,x \Rightarrow e_1 \mid \mathsf{inr}\,y \Rightarrow e_2 \\
+  e &::= x \mid \lambda x.\,e \mid \mathsf{rec}\;f\;x.\,e \mid e_1\,e_2 \mid \langle e_1, e_2\rangle \mid \mathsf{fst}\,e \mid \mathsf{snd}\,e \mid \mathsf{inl}\,e \mid \mathsf{inr}\,e \mid \mathsf{match}\;e\;\mathsf{with}\;\mathsf{inl}\,x \Rightarrow e_1 \mid \mathsf{inr}\,y \Rightarrow e_2 \\
     &\quad\mid \mathsf{true} \mid \mathsf{false} \mid \mathsf{if}\;e\;\mathsf{then}\;e_1\;\mathsf{else}\;e_2 \mid \mathsf{let}\;x=e_1\;\mathsf{in}\;e_2 \\
     &\quad\mid c \mid -e \mid e_1 + e_2 \mid e_1 \times e_2 \mid e_1 < e_2 \mid \mathsf{uniform}(e_1,e_2) \mid \mathsf{gauss}(e_1,e_2)
 \end{align*}
@@ -112,9 +112,9 @@ Judgments have the form \(\Gamma \vdash e : \tau\), where \(\Gamma\) is a standa
     {\Gamma \vdash e : \tau_2}
     {\Gamma \vdash \mathsf{inr}\,e : \tau_1 + \tau_2}
   \and
-  \inferrule[\textsc{Case}]
+  \inferrule[\textsc{Match}]
     {\Gamma \vdash e : \tau_1 + \tau_2 \\ \Gamma, x{:}\tau_1 \vdash e_1 : \tau \\ \Gamma, y{:}\tau_2 \vdash e_2 : \tau}
-    {\Gamma \vdash \mathsf{case}\;e\;\mathsf{of}\;\mathsf{inl}\,x \Rightarrow e_1 \mid \mathsf{inr}\,y \Rightarrow e_2 : \tau}
+    {\Gamma \vdash \mathsf{match}\;e\;\mathsf{with}\;\mathsf{inl}\,x \Rightarrow e_1 \mid \mathsf{inr}\,y \Rightarrow e_2 : \tau}
 \end{mathpar}
 
 \paragraph{Booleans and control.}
